# todo-calendar

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: c260ab8804a7_init_database.py
tests/: conftest.py  test_api.py
todo_calendar/: main.py
todo_calendar/application/: __init__.py  config.py  database.py  models.py  schemas.py  tasks.py  utils.py
todo_calendar/frontend/: .eslintrc.cjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml
todo_calendar/frontend/src/: App.svelte  types.ts  vite-env.d.ts
