[tool.poetry]
name = "todo-calendar"
version = "0.1.0"
description = "Calendar application with day to day tasks."
authors = ["Mark <super16mail@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_calendar"}]

[tool.poetry.dependencies]
aiosqlite = "^0.19.0"
alembic = "^1.12.1"
fastapi = {version = "^0.104.1", extras = ["all"]}
pydantic-settings = "^2.0.2"
python = "^3.11"
sqlalchemy = {version = "^2.0.23", extras = ["asyncio"]}
uvicorn = "^0.24.0.post1"

[tool.poetry.group.development.dependencies]
mypy = "^1.7.0"
ruff = "^0.1.5"

[tool.poetry.group.testing.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[tool.ruff]
line-length = 79
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "E",
    "F",
    "FBT",
    "I",
    "ICN",
    "N",
    "Q",
    "PL",
    "PLR",
    "RET",
    "S",
    "SIM",
    "SLF",
    "T20",
    "UP",
    "W",
    "YTT"
]
ignore = ["S314"]
target-version = "py311"
extend-exclude = ["tests"]

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
