[project]
name = "todo-calendar"
version = "0.2.0"
description = "Calendar application with day to day tasks."
authors = [{ name = "Mark", email = "super16mail@gmail.com" }]
dependencies = [
    "aiosqlite (==0.21.0)",
    "alembic (==1.16.5)",
    "fastapi[all] (==0.116.1)",
    "mypy (==1.17.1)",
    "pydantic-settings (==2.10.1)",
    "pytest (==8.4.1)",
    "pytest-asyncio (==1.1.0)",
    "ruff (==0.12.11)",
    "sqlalchemy[asyncio] (==2.0.43)",
    "uvicorn (==0.35.0)",
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
packages = [{ include = "todo_calendar" }]

[tool.ruff]
extend-exclude = ["tests"]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
ignore = ["S314"]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "E",
    "F",
    "FBT",
    "I",
    "ICN",
    "N",
    "Q",
    "PL",
    "PLR",
    "RET",
    "S",
    "SIM",
    "SLF",
    "T20",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.lint.mccabe]
max-complexity = 10
